--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^35.0.0",
     "firebase": "^7.5.0",
+    "native-base": "^2.13.8",
     "npm": "^6.13.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -17,7 +18,9 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-link": "^4.1.0",
+    "react-native-modals": "^0.19.9",
     "react-native-reanimated": "~1.2.0",
+    "react-native-spinkit": "^1.5.0",
     "react-native-static-server": "^0.4.2",
     "react-native-touchable-scale": "^2.1.0",
     "react-native-web": "^0.11.7",
