--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-modals": "^0.19.9",
     "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^3.0.0",
+    "react-native-rating-star": "^0.2.1",
     "react-native-spinkit": "^1.5.0",
+    "react-native-star-view": "^1.1.3",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
